--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "standard": "^11.0.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node osu_bancho.js"
   },
   "author": "Helloyunho <yunho050840@gmail.com>",
   "license": "MIT",
