--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "body-parser": "^1.18.3",
     "colors": "^1.3.1",
     "compression": "^1.7.3",
+    "cron": "^1.4.0",
     "dateformat": "^3.0.3",
     "deasync": "^0.1.13",
     "encoding": "^0.1.12",
     "express": "^4.16.3",
+    "legacy-encoding": "^3.0.0",
     "md5": "^2.2.1",
     "numeral": "^2.0.6",
     "osu-parser": "^0.3.3",
@@ -19,6 +21,8 @@
     "python-range": "^1.0.4",
     "python-shell": "^0.5.0",
     "python-struct": "^1.0.6",
+    "redis": "^2.8.0",
+    "request": "^2.88.0",
     "slice": "^1.0.0",
     "slice.js": "^1.1.1",
     "sqlite3": "^4.0.1",
@@ -30,7 +34,7 @@
     "standard": "^11.0.1"
   },
   "scripts": {
-    "start": "node osu_bancho.js"
+    "start": "node main.js"
   },
   "author": "Helloyunho <yunho050840@gmail.com>",
   "license": "MIT",
