--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "python-range": "^1.0.4",
     "python-shell": "^0.5.0",
     "python-struct": "^1.0.6",
+    "query-string": "^6.1.0",
     "redis": "^2.8.0",
     "request": "^2.88.0",
     "slice": "^1.0.0",
@@ -34,7 +35,8 @@
     "standard": "^11.0.1"
   },
   "scripts": {
-    "start": "node main.js"
+    "start_bancho": "node bancho.js",
+    "start_web_emu": "node site_emu.js"
   },
   "author": "Helloyunho <yunho050840@gmail.com>",
   "license": "MIT",
