--- a/package.json
+++ b/package.json
@@ -3,33 +3,33 @@
   "version": "1.0.0",
   "main": "test.js",
   "dependencies": {
-    "async": "^2.6.1",
+    "better-sqlite3": "^4.1.4",
     "body-parser": "^1.18.3",
     "colors": "^1.3.1",
     "compression": "^1.7.3",
     "cron": "^1.4.0",
+    "ctb-pp-calc": "^1.1.2",
     "dateformat": "^3.0.3",
-    "deasync": "^0.1.13",
+    "deasync": "0.1.13",
     "encoding": "^0.1.12",
     "express": "^4.16.3",
     "legacy-encoding": "^3.0.0",
     "md5": "^2.2.1",
+    "md5-file": "^4.0.0",
+    "multer": "^1.3.1",
     "numeral": "^2.0.6",
+    "ojsama": "^1.0.19",
     "osu-parser": "^0.3.3",
-    "pixi.js": "^4.8.1",
-    "python": "0.0.4",
-    "python-range": "^1.0.4",
-    "python-shell": "^0.5.0",
+    "pkg": "^4.3.4",
     "python-struct": "^1.0.6",
-    "query-string": "^6.1.0",
     "redis": "^2.8.0",
     "request": "^2.88.0",
-    "slice": "^1.0.0",
-    "slice.js": "^1.1.1",
-    "sqlite3": "^4.0.1",
-    "sync": "^0.2.5",
+    "rijndael-js": "^1.0.0",
+    "strip-bom": "^3.0.0",
+    "taiko-pp-calc": "^1.1.0-0",
     "uleb128": "^1.0.1",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "wifipiano2": "^1.0.1"
   },
   "devDependencies": {
     "standard": "^11.0.1"
