--- a/package.json
+++ b/package.json
@@ -3,32 +3,49 @@
   "version": "1.0.0",
   "main": "test.js",
   "dependencies": {
+    "@material-ui/core": "^3.2.0",
+    "@material-ui/icons": "^3.0.1",
+    "@sentry/node": "^4.4.2",
+    "@zeit/next-css": "^1.0.1",
+    "aws-sdk": "^2.334.0",
+    "axios": "^0.18.0",
     "better-sqlite3": "^4.1.4",
     "body-parser": "^1.18.3",
+    "child_process": "^1.0.2",
     "colors": "^1.3.1",
     "compression": "^1.7.3",
+    "cors": "^2.8.4",
     "cron": "^1.4.0",
     "ctb-pp-calc": "^1.1.2",
     "dateformat": "^3.0.3",
     "deasync": "0.1.13",
+    "detect-libc": "^1.0.3",
     "encoding": "^0.1.12",
     "express": "^4.16.3",
+    "file-loader": "^2.0.0",
     "legacy-encoding": "^3.0.0",
     "md5": "^2.2.1",
     "md5-file": "^4.0.0",
     "multer": "^1.3.1",
+    "next": "^7.0.2",
     "numeral": "^2.0.6",
     "ojsama": "^1.0.19",
     "osu-parser": "^0.3.3",
     "pkg": "^4.3.4",
     "python-struct": "^1.0.6",
     "query-string": "^6.1.0",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
     "redis": "^2.8.0",
     "request": "^2.88.0",
     "rijndael-js": "^1.0.0",
+    "semantic-ui-css": "^2.4.0",
+    "semantic-ui-react": "^0.82.5",
     "strip-bom": "^3.0.0",
     "taiko-pp-calc": "^1.1.0-0",
+    "typeface-roboto": "^0.0.54",
     "uleb128": "^1.0.1",
+    "url-loader": "^1.1.2",
     "uuid": "^3.3.2",
     "wifipiano2": "^1.0.1"
   },
